# gif_container

./: README.md
gif/: CMakeLists.txt
gif/headers/: gif_animator.hpp  gif_node.hpp  gif_node_handler.hpp  giffable_factory.hpp
gif/source/: gif_animator.cpp  gif_node.cpp  gif_node_handler.cpp
gif/test/: test_gif.cpp
interfaces/: IGifEventBinder.hpp  IGiffable.hpp
